<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soccer Hub</string>
    <string name="home">Home</string>
    <string name="vote">Vote</string>
    <string name="member">Member</string>
    <string name="login">Login</string>
    <string name="favourite">Favourite</string>
    <string name="lastMatch">Last Matches</string>
    <string name="status_waiting">Waiting</string>
    <string name="readDayStr">Read Days</string>
    <string name="leagueTodayStr">Today</string>
    <string name="leagueStr">League</string>
    <string name="title_activity_read_day_actitity">Today</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_league_today">League Today</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="title_activity_league_matches">LeagueMatchesActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="FT">FT</string>
    <string name="title_activity_spinning">SpinningActivity</string>

</resources>
